--- a/templates/cms_page/cmsbase.html
+++ b/templates/cms_page/cmsbase.html
@@ -63,7 +63,7 @@
                     </li>
                     <!-- Editor Menu Item -->
                     <li>
-                        <a href="{{url_for('main.pengguna')}}"
+                        <a href="{{url_for('main.list_pengguna')}}"
                             class="group flex items-center text-md space-x-3 py-2  rounded-md transition-colors">
                             <!-- Icon -->
                             <img src="{{ url_for('static', filename='image/asetuser.svg') }}" alt="Dashboard Icon"
@@ -91,7 +91,7 @@
                     </li>
 
                     <li>
-                        <a href="{{url_for('main.armada')}}" class="group flex items-center text-md space-x-3 py-2  rounded-md transition-colors">
+                        <a href="{{url_for('main.list_armada')}}" class="group flex items-center text-md space-x-3 py-2  rounded-md transition-colors">
                             <!-- Icon -->
                             <img src="{{ url_for('static', filename='image/bus.svg') }}" alt="Dashboard Icon"
                                 class="w-4 h-4 object-contain group-hover:brightness-110 transition" />
