--- a/templates/cms_page/rute/rute.html
+++ b/templates/cms_page/rute/rute.html
@@ -27,7 +27,7 @@
                 <!-- Tombol Tambah Artikel -->
                 <a href=""
                     class="bg-green-600 hover:bg-green-700 text-white px-5 py-2 rounded-md transition duration-200 text-center">
-                    + Tambah Rute Operasional
+                    + Tambah Rute
                 </a>
             </div>
         </div>
