--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
 
 <body class="bg-gray-50 text-gray-800 font-jakarta  ">
 
-    <header class="bg-white shadow-md fixed w-full z-10 top-0 px-4 md:px-10">
+    <header class="bg-white shadow-md fixed w-full z-10 top-0 px-4 md:px-10 text-sm">
         <div class="container mx-auto px-0 py-4 flex justify-between items-center">
             <a href="/">
                 <img src="/static/image/Logo LS.png" alt="Logo" class="h-6 w-auto">
