--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,8 @@
       <p class="text-base md:text-lg text-gray-300 mb-6">
         Sistem manajemen dan pemantauan pengemudi bus. Fokus pada keselamatan, efisiensi, dan manajemen armada.
       </p>
-      <a href="{{ url_for('auth.login') }}"
-        class="bg-white text-blue-800 font-semibold px-5 py-2.5 rounded-lg hover:bg-blue-700 transition duration-300 shadow-md text-sm md:text-base">
+      <a href=""
+        class="bg-white text-blue-800 font-semibold px-5 py-2.5 rounded-lg hover:bg-blue-700 hover:text-white transition duration-300 shadow-md text-sm md:text-base">
         Download
       </a>
     </div>
