crud armada done

--- a/templates/cms_page/armada/armada.html
+++ b/templates/cms_page/armada/armada.html
@@ -85,7 +85,7 @@
       text: 'Kamu akan diarahkan ke halaman edit.',
       icon: 'question',
       showCancelButton: true,
-      confirmButtonText: 'Lanjut Edit',
+      confirmButtonText: 'Ya, Edit',
       cancelButtonText: 'Batal',
       confirmButtonColor: '#38a169', // hijau
       cancelButtonColor: '#6c757d'  // abu-abu
