--- a/templates/cms_page/armada/edit_armada.html
+++ b/templates/cms_page/armada/edit_armada.html
@@ -33,9 +33,9 @@
                     <label for="status" class="block text-sm font-medium text-gray-700 mb-1">Status</label>
                     <select name="status" id="status"
                         class="w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:outline-none">
-                        <option value="aktif" {% if armada_data.status == 'aktif' %}selected{% endif %}>Aktif</option>
-                        <option value="nonaktif" {% if armada_data.status == 'nonaktif' %}selected{% endif %}>Nonaktif</option>
-                        <option value="diperbaiki" {% if armada_data.status == 'diperbaiki' %}selected{% endif %}>Dalam Perbaikan</option>
+                        <option value="Layak" {% if armada_data.status == 'layak' %}selected{% endif %}>Layak</option>
+                        <option value="Tidak Layak" {% if armada_data.status == 'tidak layak' %}selected{% endif %}>Tidak Layak</option>
+                        <!-- <option value="diperbaiki" {% if armada_data.status == 'diperbaiki' %}selected{% endif %}>Dalam Perbaikan</option> -->
                     </select>
                 </div>
 
@@ -49,7 +49,7 @@
                 <!-- Tombol Aksi -->
                 <div class="flex justify-between">
                     <a href="{{ url_for('main.list_armada') }}"
-                        class="bg-gray-300 hover:bg-gray-400 text-gray-800 px-5 py-2 rounded-md transition">Kembali</a>
+                        class="bg-gray-100 hover:bg-gray-400 text-gray-800 px-5 py-2 rounded-md transition">Kembali</a>
 
                     <button type="submit"
                         class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 rounded-md transition">Simpan Perubahan</button>
