--- a/templates/cms_page/cmsbase.html
+++ b/templates/cms_page/cmsbase.html
@@ -39,7 +39,7 @@
     <div class="flex">
         <!-- Sidebar -->
         <div
-            class="bg-white text-gray-900 w-60 h-screen fixed top-0 left-0 transform transition-all duration-300 ease-in-out sidebar shadow-lg">
+            class="bg-white text-gray-900 w-60 h-screen fixed top-0 left-0 flex flex-col justify-between shadow-lg">
             <div class="p-6">
                 <h2 class="text-xl font-semibold text-blue-800">Admin CMS</h2>
                 <ul class="mt-8 space-y-4">
@@ -75,7 +75,8 @@
                     </li>
                     <!-- Settings Menu Item -->
                     <li>
-                        <a href="{{url_for('main.jadwal')}}" class="group flex items-center text-md space-x-3 py-2  rounded-md transition-colors">
+                        <a href="{{url_for('main.jadwal')}}"
+                            class="group flex items-center text-md space-x-3 py-2  rounded-md transition-colors">
                             <!-- Icon -->
                             <img src="{{ url_for('static', filename='image/schedule.svg') }}" alt="Dashboard Icon"
                                 class="w-4 h-4 object-contain group-hover:brightness-110 transition" />
@@ -84,7 +85,8 @@
                     </li>
 
                     <li>
-                        <a href="{{url_for('main.rute')}}" class="group flex items-center text-md space-x-3 py-2  rounded-md transition-colors">
+                        <a href="{{url_for('main.rute')}}"
+                            class="group flex items-center text-md space-x-3 py-2  rounded-md transition-colors">
                             <!-- Icon -->
                             <img src="{{ url_for('static', filename='image/rute.svg') }}" alt="Dashboard Icon"
                                 class="w-4 h-4 object-contain group-hover:brightness-110 transition" />
@@ -93,7 +95,8 @@
                     </li>
 
                     <li>
-                        <a href="{{url_for('main.list_armada')}}" class="group flex items-center text-md space-x-3 py-2  rounded-md transition-colors">
+                        <a href="{{url_for('main.list_armada')}}"
+                            class="group flex items-center text-md space-x-3 py-2  rounded-md transition-colors">
                             <!-- Icon -->
                             <img src="{{ url_for('static', filename='image/bus.svg') }}" alt="Dashboard Icon"
                                 class="w-4 h-4 object-contain group-hover:brightness-110 transition" />
@@ -102,7 +105,8 @@
                     </li>
 
                     <li>
-                        <a href="{{url_for('main.artikel')}}" class="group flex items-center text-md space-x-3 py-2  rounded-md transition-colors">
+                        <a href="{{url_for('main.artikel')}}"
+                            class="group flex items-center text-md space-x-3 py-2  rounded-md transition-colors">
                             <!-- Icon -->
                             <img src="{{ url_for('static', filename='image/article.svg') }}" alt="Dashboard Icon"
                                 class="w-4 h-4 object-contain group-hover:brightness-110 transition" />
@@ -110,16 +114,17 @@
                         </a>
                     </li>
                     <!-- Logout Menu Item -->
-                    <li>
-                        <a href="{{ url_for('auth.logout') }}"
-                            class="group flex items-center text-md space-x-3 py-2 rounded-md transition-colors">
-                            <!-- Icon -->
-                            <img src="{{ url_for('static', filename='image/Logout.svg') }}" alt="Dashboard Icon"
-                                class="w-4 h-4 object-contain group-hover:brightness-110 transition" />
-                            <span>Logout</span>
-                        </a>
-                    </li>
+                   
                 </ul>
+            </div>
+            <!-- Bawah: Logout -->
+            <div class="p-6 py-2 border-t">
+                <a href="{{ url_for('auth.logout') }}"
+                    class="group flex items-center text-md space-x-3 py-2 rounded-md transition-colors text-red-600 hover:text-red-800">
+                    <img src="{{ url_for('static', filename='image/Logout.svg') }}" alt="Logout Icon"
+                        class="w-4 h-4 object-contain group-hover:brightness-110 transition" />
+                    <span>Logout</span>
+                </a>
             </div>
         </div>
 
