--- a/templates/cms_page/pengguna/edit_pengguna.html
+++ b/templates/cms_page/pengguna/edit_pengguna.html
@@ -38,7 +38,7 @@
 
         <div class="flex justify-between mt-6">
           <a href="{{ url_for('main.list_pengguna') }}"
-             class="text-sm text-gray-600 hover:text-blue-500 transition">← Kembali</a>
+             class="bg-gray-100 hover:bg-gray-400 text-gray-800 px-5 py-2 rounded-md transition">Kembali</a>
           <button type="submit"
                   class="bg-blue-600 hover:bg-blue-700 text-white font-semibold px-6 py-2 rounded-md transition duration-200">
             Simpan Perubahan
