--- a/templates/cms_page/pengguna/user.html
+++ b/templates/cms_page/pengguna/user.html
@@ -75,8 +75,8 @@
       text: 'Ingin mengedit data pengguna ini?',
       icon: 'question',
       showCancelButton: true,
-      confirmButtonColor: '#3085d6',
-      cancelButtonColor: '#aaa',
+      confirmButtonColor: '#38a169',
+      cancelButtonColor: '#6c757d',
       confirmButtonText: 'Ya, Edit',
       cancelButtonText: 'Batal'
     }).then((result) => {
