--- a/templates/cms_page/cmsbase.html
+++ b/templates/cms_page/cmsbase.html
@@ -85,7 +85,7 @@
                     </li>
 
                     <li>
-                        <a href="{{url_for('main.rute')}}"
+                        <a href="{{url_for('main.list_rute')}}"
                             class="group flex items-center text-md space-x-3 py-2  rounded-md transition-colors">
                             <!-- Icon -->
                             <img src="{{ url_for('static', filename='image/rute.svg') }}" alt="Dashboard Icon"
@@ -105,7 +105,7 @@
                     </li>
 
                     <li>
-                        <a href="{{url_for('main.artikel')}}"
+                        <a href="{{url_for('main.list_artikel')}}"
                             class="group flex items-center text-md space-x-3 py-2  rounded-md transition-colors">
                             <!-- Icon -->
                             <img src="{{ url_for('static', filename='image/article.svg') }}" alt="Dashboard Icon"
