--- a/templates/cms_page/armada/edit_armada.html
+++ b/templates/cms_page/armada/edit_armada.html
@@ -5,9 +5,9 @@
 
 {% block content %}
 <div class="flex">
-    <main class="flex-1 bg-gray-50 min-h-screen py-10 px-6 max-w-3xl mx-auto">
+    <main class="flex-1 bg-gray-50 min-h-screen py-10 px-6 ">
 
-        <div class="bg-white rounded-lg shadow-md p-6">
+        <div class="max-w-3xl mx-auto bg-white rounded-lg shadow-md p-6">
             <h2 class="text-2xl font-bold text-gray-800 mb-6">Edit Data Armada</h2>
 
             <form method="POST" action="{{ url_for('main.update_armada') }}">
