--- a/templates/cms_page/jadwal/jadwal.html
+++ b/templates/cms_page/jadwal/jadwal.html
@@ -7,7 +7,7 @@
 {% block content %}
 <!-- Sidebar -->
 <div class="flex">
-    <main class="flex-1 bg-gray-50 min-h-screen py-8 px-6">
+    <main class="flex-1 bg-gray-50 py-8 px-6">
 
         <!-- Header Section -->
         <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-4 mb-8">
