--- a/templates/cms_page/armada/armada.html
+++ b/templates/cms_page/armada/armada.html
@@ -30,7 +30,7 @@
         </div>
 
         <!-- Table -->
-        <div class="bg-white rounded-md shadow-sm overflow-hidden">
+        <div class="bg-white rounded-md shadow-sm overflow-visible">
             <table class="min-w-full table-auto border-collapse">
                 <thead class="bg-blue-100 text-gray-700 text-sm uppercase">
                     <tr>
