--- a/templates/cms_page/rute/rute.html
+++ b/templates/cms_page/rute/rute.html
@@ -34,7 +34,7 @@
 
 
         <!-- Table Section -->
-        <div class="bg-white rounded-md shadow-sm overflow-hidden">
+        <div class="bg-white rounded-md shadow-sm overflow-visible">
             <table class="min-w-full table-auto border-collapse">
                 <thead class="bg-blue-100 text-gray-700 text-sm uppercase">
                     <tr>
