--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -93,6 +93,14 @@
                             <a href="{{ url_for('auth.login') }}" class="text-blue-50">Login here</a>
                         </p>
                     </div>
+
+                    <div class="text-center mt-4">
+                        <p class="text-sm">Already have an account?
+                            <a href="{{ url_for('auth.register_google') }}" class="text-blue-50">google</a>
+                        </p>
+                    </div>
+
+                    
                 </form>
             </div>
 
