--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -12,12 +12,14 @@
 
 <body class="bg-white text-gray-800 font-poppins">
 
-  <div class="flex items-center justify-center min-h-screen bg-gradient-to-tr from-red-950 to-violet-950 px-4 relative bg-cover bg-center bg-no-repeat">
+  <div
+    class="flex items-center justify-center min-h-screen bg-gradient-to-tr from-red-950 to-violet-950 px-4 relative bg-cover bg-center bg-no-repeat">
     <!-- Overlay Background -->
     <div class="absolute inset-0 bg-black/40 z-0"></div>
 
     <!-- Container -->
-    <div class="w-full max-w-4xl flex flex-col md:flex-row shadow-lg rounded-3xl overflow-hidden bg-black/50 backdrop-blur-sm z-10">
+    <div
+      class="w-full max-w-4xl flex flex-col md:flex-row shadow-lg rounded-3xl overflow-hidden bg-black/50 backdrop-blur-sm z-10">
 
       <!-- Left side (Welcome Text) -->
       <div class="hidden md:flex w-1/2 text-white justify-center items-center relative">
@@ -28,20 +30,21 @@
 
       <!-- Right side (Form) -->
       <div class="w-full md:w-1/2 p-8">
-        <form action="{{ url_for('auth.login') }}" method="POST" class="max-w-sm mx-auto bg-white/10 backdrop-blur-md p-6 rounded-lg shadow-md text-white">
+        <form action="{{ url_for('auth.login') }}" method="POST"
+          class="max-w-sm mx-auto bg-white/10 backdrop-blur-md p-6 rounded-lg shadow-md text-white">
           <h2 class="text-2xl font-bold text-left mb-6">Login</h2>
 
           <!-- Flash message -->
           {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-              <div class="mb-4 space-y-2">
-                {% for category, message in messages %}
-                  <div class="text-sm px-4 py-2 rounded {{ 'bg-green-500' if category == 'success' else 'bg-red-500' }}">
-                    {{ message }}
-                  </div>
-                {% endfor %}
-              </div>
-            {% endif %}
+          {% if messages %}
+          <div class="mb-4 space-y-2">
+            {% for category, message in messages %}
+            <div class="text-sm px-4 py-2 rounded {{ 'bg-green-500' if category == 'success' else 'bg-red-500' }}">
+              {{ message }}
+            </div>
+            {% endfor %}
+          </div>
+          {% endif %}
           {% endwith %}
 
           <div class="mb-4">
@@ -56,7 +59,8 @@
           </div>
           <div class="flex items-center justify-between mb-6">
             <div class="flex items-center">
-              <input type="checkbox" id="remember" name="remember" class="h-4 w-4 text-blue-600">
+              <input type="checkbox" id="remember" name="remember"
+                class="h-4 w-4 text-blue-600 bg-white rounded focus:ring-0">
               <label for="remember" class="ml-2 text-sm">Remember Me</label>
             </div>
             <a href="{{ url_for('auth.forgot_password') }}" class="text-sm text-blue-50">Forgot Password?</a>
@@ -66,10 +70,18 @@
             Login
           </button>
           <div class="text-center mt-4">
-            <p class="text-sm">Don't have an account?
-              <a href="{{ url_for('auth.register') }}" class="text-blue-50">Sign up</a>
+            <a href="{{ url_for('auth.login_google') }}"
+              class="w-full inline-flex items-center justify-center py-2 border border-white rounded-lg shadow-sm bg-transparent text-sm font-medium text-white hover:bg-gray-50 hover:text-black transition-all duration-200">
+              <img src="{{ url_for('static', filename='image/google-logo.svg') }}" alt="Google" class="h-5 w-5 mr-2">
+              Login dengan Google
+            </a>
+          </div>
+          <div class="text-center mt-4">
+            <p class="text-sm">Belum punya akun?
+              <a href="{{ url_for('auth.register') }}" class="text-blue-500">Daftar Sekarang</a>
             </p>
           </div>
+
         </form>
       </div>
     </div>
