--- a/templates/cms_page/artikel/tambah_artikel.html
+++ b/templates/cms_page/artikel/tambah_artikel.html
@@ -7,13 +7,19 @@
 <div class="max-w-2xl mx-auto mt-10 bg-white p-8 rounded-xl shadow-lg">
     <h2 class="text-2xl font-semibold text-gray-800 mb-6">Form Tambah Armada</h2>
 
-    <form method="POST" action="{{ url_for('main.tambah_artikel') }}" class="space-y-5">
+    <form method="POST" action="{{ url_for('main.tambah_artikel') }}" enctype="multipart/form-data" class="space-y-5">
+
+        <div>
+            <label for="gambar" class="block mb-1 font-medium text-gray-700">Upload Gambar</label>
+            <input type="file" name="gambar" id="gambar"
+                class="w-full border border-gray-300 px-4 py-2 rounded-md focus:ring-2 focus:ring-blue-500 focus:outline-none file:bg-gray-100 file:border file:mr-4 file:py-2 file:px-4 file:rounded file:text-sm file:font-semibold file:text-gray-700">
+        </div>
         <!-- judul -->
         <div>
             <label for="judul" class="block mb-1 font-medium text-gray-700">Judul Artikel</label>
             <input type="text" name="judul" id="judul" required
                 class="w-full border border-gray-300 px-4 py-2 rounded-md focus:ring-2 focus:ring-blue-500 focus:outline-none"
-                placeholder="https://www.example.com/judul-artikel">
+                placeholder="Contoh: Judul Artikel">
         </div>
 
         <!-- sub judul -->
@@ -35,7 +41,7 @@
 
         <!-- Tombol Simpan & Kembali -->
         <div class="flex justify-between items-center mt-6">
-            <a href="{{ url_for('main.list_armada') }}"
+            <a href="{{ url_for('main.list_artikel') }}"
                 class="bg-gray-200 hover:bg-gray-300 text-gray-700 font-semibold px-6 py-2 rounded-md transition">
                 Kembali
             </a>
